--- a/main.tex
+++ b/main.tex
@@ -104,34 +104,62 @@ Materials Theory Group, Rutgers University, USA
 % #########################################
 % #########################################
 
-
 \section{Defining the Problem}
 \subsection{SC Classifications}
 
 \begin{frame}
 {Superconductor Classifications}
- 
-\begin{itemize}
-    \item General Classifications:
-        \begin{enumerate}
-            \item \textsc{Type I}
-            \item \textsc{Type II}
-            \item \textsc{Type III}
-            \item \textsc{(Type IV)}
-            \item $\ldots$
-        \end{enumerate}
+    The well-established...
+    \begin{itemize}
+        \item \textsc{Gen I}:
+            \begin{itemize}
+                \item Charge neutral, e.g. lead
+                \item Traditional Cooper pair
+            \end{itemize}
+        \item \textsc{Gen II}
+            \begin{itemize}
+                \item Magnetic moment / local pairing of electrons
+                \item Chemical doping, disabling long-range ferromagnetic effects
+            \end{itemize}
+    \end{itemize}
+    The frontier...
+    \begin{itemize}
+        \item \textsc{Gen III}: % Hidden SCs!!!!!!!!!!!!!!!
+            \begin{itemize}
+                \item Sodium chloride with charge separation, ionic SCs
+                \item Borderline ionic insulators
+            \end{itemize}
+        \item \textsc{Gen IV}:
+            \begin{itemize}
+                \item Multiferroics / magnetism and ionics
+            \end{itemize}
+    \end{itemize}
         
-    \item But where is the 'unconventional'?
-\end{itemize}
+        
+    % But where is the 'unconventional'?
  
-\citet{baskaran2015}
 \end{frame}
 
 
 % #########################################
 % #########################################
 
-\subsection{Quantum Oscillations}
+
+\subsection{States in the Gap}
+
+\begin{frame}
+{States in the Gap}
+
+        
+
+\end{frame}
+
+
+% #########################################
+% #########################################
+
+
+\subsubsection{Quantum Oscillations}
 
 \begin{frame}[t]{Quantum Oscillations}
   \begin{block}{Inputs}
@@ -156,10 +184,12 @@ Materials Theory Group, Rutgers University, USA
 % % #########################################
 
 
-\begin{frame}{Why Do We Care?}
-  \begin{itemize}
-      \item $SmB_6$
-  \end{itemize}
+\begin{frame}{Why \textit{Should} We Care?}
+    \begin{itemize}
+        \item $Sm B_6$, $La_2 O_4$, $LaOFeAs$, $(CuS)$
+        \item Why are we seeing states in insulating gaps of these materials? 
+        \item Understanding this opens doors to finding similar high-temp SCs
+    \end{itemize}
 \end{frame}
 
 
@@ -171,7 +201,7 @@ Materials Theory Group, Rutgers University, USA
 
 
     \begin{itemize}
-        \item Two paths diverging in a wood:
+        \item Two divergent approaches:
             \begin{enumerate}
                 \item Emergent Composite Particles:
                     \begin{itemize}
@@ -190,6 +220,7 @@ Materials Theory Group, Rutgers University, USA
 % % #########################################
 % % #########################################
 
+\section{The MF Model}
 
 \begin{frame}{Bogoliubov Excitations and the Origin of MFs}
     
@@ -198,6 +229,8 @@ Materials Theory Group, Rutgers University, USA
 
 % % #########################################
 % % #########################################
+
+\section{The Spinon Model}
 
 
 \begin{frame}{Spinons}
@@ -208,6 +241,7 @@ Materials Theory Group, Rutgers University, USA
 % % #########################################
 % % #########################################
 
+\section{Supercurrent Theory}
 
 \begin{frame}{Supercurrents (+ Superfluidity)}
     
@@ -217,14 +251,30 @@ Materials Theory Group, Rutgers University, USA
 % % #########################################
 % % #########################################
 
+\section{Takeaways}
 
-\begin{frame}{The Lingering Questions}
+\begin{frame}{Implications}
     
     \begin{itemize}
+        \item The MF model presents a practicable rationale for states in the gap.
+        
         \item Can we just keep adding (always unnecessarily) complex descriptions, or should we 'seal off' and commit to a new prescription?
         
         \item How do we reinvent condensed matter physics to both simplify and clarify what we know?
     \end{itemize}
+    
+\end{frame}
+
+
+% % #########################################
+% % #########################################
+
+
+\begin{frame}{}
+
+    \centering "A riddle, wrapped in a mystery, inside an enigma" 
+    
+    -- W. Churchill
     
 \end{frame}
 
