Latest iteration of for pres.

--- a/beamerouterthemecambridge.sty
+++ b/beamerouterthemecambridge.sty
@@ -12,9 +12,9 @@
 \setbeamercolor{Progress}{fg=structure.fg!50}
 
 % In pres. logo at bottom of presentation slides.
-\pgfdeclareimage[height=0.5 \cam@outer@pitch]{beamerlogocambridge}{uc-cmyk}
+% \pgfdeclareimage[height=0.5 \cam@outer@pitch]{beamerlogocambridge}{uc-cmyk}
 
-\mode<presentation>
+% \mode<presentation>
 
 % Mini frames
 
